About me page update to final draft for current assignment

--- a/personal-website/about.html
+++ b/personal-website/about.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="javascript.js" />
+    <title>About Me</title>
 </head>
+
 <body>
-    
+
+    <section class="header">
+        <nav>
+            Victoria Bock
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="portfolio.html">Projects</a></li>
+            </ul>
+        </nav>
+        <section class="text-box">
+            <h1>This is About Me page</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi delectus accusamus totam
+                dolores
+                impedit, laudantium eos ad in dolorem obcaecati maxime veritatis esse sapiente aut natus cupiditate
+                ipsum
+                officia.
+            </p>
+        </section>
+    </section>
+
 </body>
+
 </html>
