--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="javascript.js">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <section class="header">
+        <nav>
+            Victoria Bock
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="portfolio.html">Projects</a></li>
+            </ul>
+        </nav>
+        <section class="text-box">
+            <h1>Aspiring UI Developer, Mentor</h1>
+            <p>
+                Creating the trail to a better future for myself and create user platforms that work for the customer
+                and the client.
+            </p>
+            <p>
+                Training to learn usable skills in the tech field along with current management skills to
+                help others achieve their dreams in the future.
+            </p>
+        </section>
+        <section class="photo-right">
+            <img src="thats-me.jpeg" alt="Blinders on Selfie" width="300px">
+        </section>
+        <section class="quote">
+            <p>
+                “Do not go where the path may lead, go instead where there is no path and leave a trail.”
+                -Ralph Waldo Emerson, 19th-Century Philosopher
+            </p>
+        </section>
+    </section>
+
 </body>
+
 </html>
