photos and spacing added to about me and projects pages

--- a/personal-website/about.html
+++ b/personal-website/about.html
@@ -21,14 +21,57 @@
             </ul>
         </nav>
         <section class="text-box">
-            <h1>This is About Me page</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi delectus accusamus totam
-                dolores
-                impedit, laudantium eos ad in dolorem obcaecati maxime veritatis esse sapiente aut natus cupiditate
-                ipsum
-                officia.
-            </p>
+            <h1>Little to know what drives me to be the best I can be and helps me get through this thing we call life
+            </h1>
         </section>
+
+        <table>
+            <img class="photo" src="friends-family.jpeg" alt="Family Photo" width="300px">
+            <tr>
+                <section class="text-box">
+                    <h3>Family and Friends</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nostrum repellendus tenetur,
+                        debitis,
+                        quos asperiores aut laborum ex ab velit dicta eum, optio voluptates nemo officia ut voluptatum
+                        iusto
+                        voluptate.
+                    </p>
+                </section>
+            </tr>
+        </table>
+
+        <table>
+            <img class="photo" src="nature.jpeg" alt="Nature View" width="300px">
+            <tr>
+                <section class="text-box">
+                    <h3>Exploring Nature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus consequatur hic recusandae
+                        aliquid
+                        omnis saepe natus modi tenetur quod fuga ipsum dolor numquam nisi, sint possimus perferendis
+                        accusantium
+                        voluptas maiores.
+                    </p>
+                </section>
+            </tr>
+        </table>
+
+        <img class="photo" src="crafting.jpeg" alt="crafts" width="300px">
+        <table>
+            <tr>
+                <section class="text-box">
+                    <h3>Crafting</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui facere ullam nesciunt
+                        illum
+                        hic
+                        magni quae sit accusamus doloremque error cumque, nostrum ratione esse vitae odio. Molestias, ut
+                        iste.
+                    </p>
+                </section>
+            </tr>
+        </table>
     </section>
 
 </body>
