--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="javascript.js">
-    <title>Personal Website</title>
+    <title>Personal Website - Home</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <section class="text-box">
-            <h1>Aspiring UI Developer, Mentor</h1>
+            <h1>Aspiring UX Developer, Mentor</h1>
             <p>
                 Creating the trail to a better future for myself and create user platforms that work for the customer
                 and the client.
