--- a/personal-website/portfolio.html
+++ b/personal-website/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="javascript.js">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
@@ -21,16 +21,24 @@
             </ul>
         </nav>
         <section class="text-box">
-            <h1>This is Projects page</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi delectus accusamus totam
-                dolores
-                impedit, laudantium eos ad in dolorem obcaecati maxime veritatis esse sapiente aut natus cupiditate
-                ipsum
-                officia.
-            </p>
+            <h1>Although a small list of projects, these are projects nonetheless.</h1>
         </section>
-    </section>
-    
+
+        <img class="photo" src="project1.jpeg" alt="Grocery List Project" width="300px">
+        <table>
+            <tr>
+                <section class="text-box">
+                    <h3>My Grocery list</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit error dolor perspiciatis nemo!
+                        Voluptatem doloremque sint necessitatibus impedit id illum iste. Beatae obcaecati non explicabo
+                        eaque voluptas at nam assumenda!
+                    </p>
+                </section>
+            </tr>
+        </table>
+
+
 </body>
 
 </html>
