Tidying up title names and names of html files. Minor editing on wording on home page

--- a/personal-website/home.html
+++ b/personal-website/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="javascript.js"></script>
-    <title>Personal Website - Home</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -15,13 +15,13 @@
         <nav>
             Victoria Bock
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Projects</a></li>
             </ul>
         </nav>
         <section class="text-box">
-            <h1>Aspiring UX Developer, Mentor</h1>
+            <h1>Aspiring UX Developer and Mentor</h1>
             <p>
                 Creating the trail to a better future for myself and create user platforms that work for the customer
                 and the client.
