--- a/personal-website/portfolio.html
+++ b/personal-website/portfolio.html
@@ -15,7 +15,7 @@
         <nav>
             Victoria Bock
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Projects</a></li>
             </ul>
