clean up, condense  and redo css on all 3 pages.

--- a/personal-website/about.html
+++ b/personal-website/about.html
@@ -20,16 +20,18 @@
                 <li><a href="portfolio.html">Projects</a></li>
             </ul>
         </nav>
-        <section class="text-box">
-            <h1>Little to know what drives me to be the best I can be and helps me get through this thing we call life
+        <section class="text-box" style="text-align: center;">
+            <h1>
+                Little to know what drives me to be the best I can be and helps me get through this thing we call life
             </h1>
         </section>
 
         <table>
-            <img class="photo" src="friends-family.jpeg" alt="Family Photo" width="300px">
+
             <tr>
                 <section class="text-box">
                     <h3>Family and Friends</h3>
+                    <img class="photo" src="friends-family.jpeg" alt="Family Photo" width="300px">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nostrum repellendus tenetur,
                         debitis,
@@ -42,10 +44,10 @@
         </table>
 
         <table>
-            <img class="photo" src="nature.jpeg" alt="Nature View" width="300px">
             <tr>
                 <section class="text-box">
                     <h3>Exploring Nature</h3>
+                    <img class="photo-2" src="nature.jpeg" alt="Nature View" width="300px">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus consequatur hic recusandae
                         aliquid
@@ -57,12 +59,13 @@
             </tr>
         </table>
 
-        <img class="photo" src="crafting.jpeg" alt="crafts" width="300px">
+
         <table>
             <tr>
                 <section class="text-box">
                     <h3>Crafting</h3>
-                    <p>
+                    <img class="photo" src="crafting.jpeg" alt="crafts" width="300px">
+                    <p style="margin: 20px;">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui facere ullam nesciunt
                         illum
                         hic
