--- a/personal-website/portfolio.html
+++ b/personal-website/portfolio.html
@@ -20,15 +20,16 @@
                 <li><a href="portfolio.html">Projects</a></li>
             </ul>
         </nav>
-        <section class="text-box">
+        <section class="text-box" style="text-align: center;">
             <h1>Although a small list of projects, these are projects nonetheless.</h1>
         </section>
 
-        <img class="photo" src="project1.jpeg" alt="Grocery List Project" width="300px">
+
         <table>
             <tr>
                 <section class="text-box">
                     <h3>My Grocery list</h3>
+                    <img class="photo" src="project1.jpeg" alt="Grocery List Project" width="300px">
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit error dolor perspiciatis nemo!
                         Voluptatem doloremque sint necessitatibus impedit id illum iste. Beatae obcaecati non explicabo
