--- a/personal-website/home.html
+++ b/personal-website/home.html
@@ -21,7 +21,8 @@
             </ul>
         </nav>
         <section class="text-box">
-            <h1>Aspiring UX Developer and Mentor</h1>
+            <h3>Aspiring UX Developer and Mentor</h3>
+            <img class="photo-2" src="thats-me.jpeg" alt="Blinders on Selfie" width="300px">
             <p>
                 Creating the trail to a better future for myself and create user platforms that work for the customer
                 and the client.
@@ -31,9 +32,7 @@
                 help others achieve their dreams in the future.
             </p>
         </section>
-        <section class="photo-right">
-            <img src="thats-me.jpeg" alt="Blinders on Selfie" width="300px">
-        </section>
+
         <section class="quote">
             <p>
                 “Do not go where the path may lead, go instead where there is no path and leave a trail.”
@@ -41,6 +40,11 @@
             </p>
         </section>
     </section>
+    <!-- <a href="https://www.facebook.com/thenameisjude">
+        <ion-icon name="logo-facebook"></ion-icon>
+    </a>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> -->
 
 </body>
 
