This update has a functioning email contact page, updates to padding and margins across pages, and an updated (not finished) footer with functioning links

--- a/personal-website/about.html
+++ b/personal-website/about.html
@@ -18,16 +18,16 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Projects</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
         <section class="text-box" style="text-align: center;">
             <h1>
-                Little to know what drives me to be the best I can be and helps me get through this thing we call life
+                Some things that help clear up down time
             </h1>
         </section>
 
-        <table>
-
+        <table style="padding: 2% 2%;">
             <tr>
                 <section class="text-box">
                     <h3>Family and Friends</h3>
@@ -43,7 +43,7 @@
             </tr>
         </table>
 
-        <table>
+        <table style="padding: 2% 2%;">
             <tr>
                 <section class="text-box">
                     <h3>Exploring Nature</h3>
@@ -59,13 +59,12 @@
             </tr>
         </table>
 
-
-        <table>
+        <table style="padding: 2% 2%;">
             <tr>
                 <section class="text-box">
                     <h3>Crafting</h3>
                     <img class="photo" src="crafting.jpeg" alt="crafts" width="300px">
-                    <p style="margin: 20px;">
+                    <p style="margin: 20px; padding-bottom: 20%;">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui facere ullam nesciunt
                         illum
                         hic
@@ -76,6 +75,15 @@
             </tr>
         </table>
     </section>
+
+    <footer>
+        <a href="https://www.facebook.com/thenameisjude/" target="_blank">
+            <img class="socials" src="logo-facebook.svg" alt="Facebook">
+        </a>
+        <a href="https://www.linkedin.com/in/victoria-bock-1b6136328/" target="_blank">
+            <img class="socials" src="logo-linkedin.svg" alt="linkedin">
+        </a>
+    </footer>
 
 </body>
 
