--- a/personal-website/home.html
+++ b/personal-website/home.html
@@ -2,50 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="javascript.js"></script>
-    <title>Home</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="javascript.js"></script>
+  <title>Home</title>
 </head>
 
 <body>
-
-    <section class="header">
-        <nav>
-            Victoria Bock
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="portfolio.html">Projects</a></li>
-            </ul>
-        </nav>
-        <section class="text-box">
-            <h2>Aspiring UX Developer and Mentor</h2>
-            <img class="photo-2" src="thats-me.jpeg" alt="Blinders on Selfie" width="300px">
-            <p>
-                Creating the trail to a better future for myself and create user platforms that work for the customer
-                and the client.
-            </p>
-            <p>
-                Training to learn usable skills in the tech field along with current management skills to
-                help others achieve their dreams in the future.
-            </p>
-        </section>
-
-        <section class="quote">
-            <p>
-                “Do not go where the path may lead, go instead where there is no path and leave a trail.”
-                -Ralph Waldo Emerson, 19th-Century Philosopher
-            </p>
-        </section>
+  <section class="header">
+    <nav>
+      Victoria Bock
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="portfolio.html">Projects</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </ul>
+    </nav>
+    <section class="text-box">
+      <h2>Aspiring UX Developer and Mentor</h2>
+      <img class="photo-2" src="thats-me.jpeg" alt="Blinders on Selfie" width="300px" />
+      <p>
+        Creating the trail to a better future for myself and create user
+        platforms that work for the customer and the client.
+      </p>
+      <p>
+        Training to learn usable skills in the tech field along with current
+        management skills to help others achieve their dreams in the future.
+      </p>
     </section>
-    <!-- <a href="https://www.facebook.com/thenameisjude">
-        <ion-icon name="logo-facebook"></ion-icon>
-    </a>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> -->
 
+    <section class="quote">
+      <p>
+        “Do not go where the path may lead, go instead where there is no path
+        and leave a trail.” -Ralph Waldo Emerson, 19th-Century Philosopher
+      </p>
+    </section>
+  </section>
+  <footer>
+    <a href="https://github.com/vbock97" target="_blank">
+      <img class="socials" src="img/github-logo.svg" alt="GitHub">
+    </a>
+    <a href="https://www.linkedin.com/in/victoria-bock-1b6136328/" target="_blank">
+      <img class="socials" src="img/linkedin.svg" alt="linkedin">
+    </a>
+  </footer>
 </body>
 
 </html>
