--- a/personal-website/portfolio.html
+++ b/personal-website/portfolio.html
@@ -18,6 +18,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Projects</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
         <section class="text-box" style="text-align: center;">
@@ -39,6 +40,14 @@
             </tr>
         </table>
 
+        <footer>
+            <a href="https://www.facebook.com/thenameisjude/" target="_blank">
+                <img class="socials" src="logo-facebook.svg" alt="Facebook">
+            </a>
+            <a href="https://www.linkedin.com/in/victoria-bock-1b6136328/" target="_blank">
+                <img class="socials" src="logo-linkedin.svg" alt="linkedin">
+            </a>
+        </footer>
 
 </body>
 
