Fixing issue with images not loading due to moving to a folder. Made nav pages transition when hover

--- a/personal-website/about.html
+++ b/personal-website/about.html
@@ -31,7 +31,7 @@
             <tr>
                 <section class="text-box">
                     <h3>Family and Friends</h3>
-                    <img class="photo" src="friends-family.jpeg" alt="Family Photo" width="300px">
+                    <img class="photo" src="img/friends-family.jpeg" alt="Family Photo" width="300px">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nostrum repellendus tenetur,
                         debitis,
@@ -47,7 +47,7 @@
             <tr>
                 <section class="text-box">
                     <h3>Exploring Nature</h3>
-                    <img class="photo-2" src="nature.jpeg" alt="Nature View" width="300px">
+                    <img class="photo-2" src="img/nature.jpeg" alt="Nature View" width="300px">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus consequatur hic recusandae
                         aliquid
@@ -63,7 +63,7 @@
             <tr>
                 <section class="text-box">
                     <h3>Crafting</h3>
-                    <img class="photo" src="crafting.jpeg" alt="crafts" width="300px">
+                    <img class="photo" src="img/crafting.jpeg" alt="crafts" width="300px">
                     <p style="margin: 20px; padding-bottom: 20%;">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui facere ullam nesciunt
                         illum
@@ -75,16 +75,14 @@
             </tr>
         </table>
     </section>
-
     <footer>
-        <a href="https://www.facebook.com/thenameisjude/" target="_blank">
-            <img class="socials" src="logo-facebook.svg" alt="Facebook">
+        <a href="https://github.com/vbock97" target="_blank">
+          <img class="socials" src="img/github-logo.svg" alt="GitHub">
         </a>
         <a href="https://www.linkedin.com/in/victoria-bock-1b6136328/" target="_blank">
-            <img class="socials" src="logo-linkedin.svg" alt="linkedin">
+          <img class="socials" src="img/linkedin.svg" alt="linkedin">
         </a>
-    </footer>
-
+      </footer>
 </body>
 
 </html>
