--- a/personal-website/contact.html
+++ b/personal-website/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script defer src="javascript.js"></script>
     <title>Contact Me</title>
 </head>
+
 <body>
     <section class="header">
         <nav>
@@ -29,7 +31,15 @@
             <label for="message">Message:</label><textarea name="message" id="message">Type your message here</textarea>
             <button type="submit">Submit</button>
         </form>
+        <footer>
+            <a href="https://github.com/vbock97" target="_blank">
+                <img class="socials" src="img/github-logo.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/victoria-bock-1b6136328/" target="_blank">
+                <img class="socials" src="img/linkedin.svg" alt="linkedin">
+            </a>
+        </footer>
 
-    
 </body>
+
 </html>
