--- a/personal-website/home.html
+++ b/personal-website/home.html
@@ -22,7 +22,7 @@
     </nav>
     <section class="text-box">
       <h2>Aspiring UX Developer and Mentor</h2>
-      <img class="photo-2" src="thats-me.jpeg" alt="Blinders on Selfie" width="300px" />
+      <img class="photo-2" src="img/thats-me.jpeg" alt="Blinders on Selfie" width="300px" />
       <p>
         Creating the trail to a better future for myself and create user
         platforms that work for the customer and the client.
