--- a/personal-website/portfolio.html
+++ b/personal-website/portfolio.html
@@ -30,7 +30,7 @@
             <tr>
                 <section class="text-box">
                     <h3>My Grocery list</h3>
-                    <img class="photo" src="project1.jpeg" alt="Grocery List Project" width="300px">
+                    <img class="photo" src="img/project1.jpeg" alt="Grocery List Project" width="300px">
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit error dolor perspiciatis nemo!
                         Voluptatem doloremque sint necessitatibus impedit id illum iste. Beatae obcaecati non explicabo
@@ -39,16 +39,14 @@
                 </section>
             </tr>
         </table>
-
         <footer>
-            <a href="https://www.facebook.com/thenameisjude/" target="_blank">
-                <img class="socials" src="logo-facebook.svg" alt="Facebook">
+            <a href="https://github.com/vbock97" target="_blank">
+              <img class="socials" src="img/github-logo.svg" alt="GitHub">
             </a>
             <a href="https://www.linkedin.com/in/victoria-bock-1b6136328/" target="_blank">
-                <img class="socials" src="logo-linkedin.svg" alt="linkedin">
+              <img class="socials" src="img/linkedin.svg" alt="linkedin">
             </a>
-        </footer>
-
+          </footer>
 </body>
 
 </html>
